apps/base/media-center/bazarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr
  namespace: media
  labels:
    app.kubernetes.io/name: bazarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: bazarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: bazarr
    spec:
      containers:
        - name: bazarr
          image: lscr.io/linuxserver/bazarr:v1.6.2-ls366
          ports:
            - name: http
              containerPort: 6767
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /config
            - name: videos
              mountPath: /movies
            - name: tv
              mountPath: /tv
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: bazarr-config
        - name: videos
          persistentVolumeClaim:
            claimName: jellyfin-videos
        - name: tv
          persistentVolumeClaim:
            claimName: jellyfin-videos
