apps/base/media-center/bazarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bazarr
  namespace: media
  labels:
    app.kubernetes.io/name: bazarr
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 6767
      protocol: TCP
  selector:
    app.kubernetes.io/name: bazarr
