apps/base/media-center/bazarr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bazarr
  namespace: media
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: kube-system
  hostnames:
    - bazarr.nathan-fouere.com
  rules:
    - backendRefs:
        - name: bazarr
          port: 80
